--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,11 +5,58 @@ html > body{
 
 .jdv-main {
   position: absolute;
-
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
 
+.jdv-board {
+  padding: 32px;
   width: 320px;
   height: 320px;
+
+  .jdv-board-row{
+
+    height: 33%;
+
+    .jdv-board-item {
+      width: 33%;
+      height: 100%;
+
+      float: left;
+      border: 0px solid black;
+
+      & > * {
+        display: table;
+        width: 100%;
+        height: 100%;
+
+        & > span {
+          font-size: 30px;
+          text-align: center;
+          display: table-cell;
+          vertical-align: middle;
+        }
+
+      }
+    }
+
+    &:not(:last-of-type) > .jdv-board-item {
+      border-bottom-width: 1px;
+    }
+
+    & > .jdv-board-item:not(:last-of-type) {
+      border-right-width: 1px;
+    }
+  }
+}
+
+.jdv-actions {
+  padding: 32px;
+
+  button {
+    display: block;
+    font-size: 2em;
+    margin: 0 auto;
+  }
 }
